force-app/main/default/objects/Order/fields/Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date__c</fullName>
    <description>Expected delevery date</description>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>