force-app/main/default/objects/Order/fields/External_ERP_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ERP_Order_ID__c</fullName>
    <description>For creating integration with Erp</description>
    <externalId>true</externalId>
    <label>External ERP Order ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>