force-app/main/default/objects/Order/fields/Order_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Order Item Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>