force-app/main/default/objects/Order/validationRules/Cancelled_Order_Cannot_Reopen.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Order_Cannot_Reopen</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status), &quot;Cancelled&quot;),
    OR(
        ISPICKVAL(Status, &quot;Processing&quot;),
        ISPICKVAL(Status, &quot;Shipped&quot;),
        ISPICKVAL(Status, &quot;Delivered&quot;)
    )
)</errorConditionFormula>
    <errorMessage>A Cancelled Order cannot be moved to Processing, Shipped, or Delivered.</errorMessage>
</ValidationRule>