force-app/main/default/objects/Order/validationRules/Expected_Delivery_Date_Not_Before_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Delivery_Date_Not_Before_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Expected_Delivery_Date__c)),
    Expected_Delivery_Date__c &lt; EffectiveDate
)</errorConditionFormula>
    <errorDisplayField>Expected_Delivery_Date__c</errorDisplayField>
    <errorMessage>Expected Delivery Date cannot be earlier than Order Start Date.</errorMessage>
</ValidationRule>