force-app/main/default/objects/Order/validationRules/Integration_Status_Requires_Confirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>Integration_Status_Requires_Confirmed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Integration_Status__c, &quot;Not Sent&quot;)),
    NOT(ISPICKVAL(Status, &quot;Confirmed&quot;))
)</errorConditionFormula>
    <errorMessage>Integration Status can only be changed from Not Sent when the Order is Confirmed.</errorMessage>
</ValidationRule>